<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"


    android:layout_height="match_parent"
    android:weightSum="1">

    <RelativeLayout
        android:layout_width="match_parent"
        android:id="@+id/layout_header"
        android:layout_height="wrap_content"
        tools:layout_height="90dp">
        <ImageView

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/icon_weather"
            android:id="@+id/icon"
            android:layout_marginTop="8dp"

            android:layout_centerHorizontal="true" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:text="Clear"
            android:id="@+id/main"
            android:layout_centerVertical="true"
            android:gravity="center"
            android:layout_below="@id/icon"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <TextView
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:text="sky is clear"
            android:layout_marginBottom="8dp"
            android:id="@+id/description"
            android:layout_below="@+id/main"

            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />
    </RelativeLayout>






    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/main_information"
        android:layout_marginLeft="16dp"
        android:id="@+id/title_main" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:background="@color/grey"/>


    <TextView

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/temperature_information"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="8dp"
        android:id="@+id/title_temperature" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/temp"
            android:layout_marginLeft="24dp"
            android:id="@+id/label_temp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="283.4°C"
            android:layout_marginLeft="24dp"
            android:id="@+id/temp" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/temp_min"
            android:layout_marginLeft="24dp"
            android:id="@+id/label_temp_min" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="283.4°C"
            android:layout_marginLeft="24dp"
            android:id="@+id/temp_min" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/temp_max"
            android:layout_marginLeft="24dp"
            android:id="@+id/label_temp_max" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="283.4 °C"
            android:layout_marginLeft="24dp"
            android:id="@+id/temp_max" />


    </LinearLayout>

<!--Pressure info-->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/pressure_information"
        android:layout_marginLeft="16dp"
        android:id="@+id/textView5" />

    <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pressure"
        android:layout_marginLeft="24dp"
        android:id="@+id/label_pressure" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="998 hPa"
        android:layout_marginLeft="24dp"
        android:id="@+id/pressure" />


</LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/seal_level"
            android:layout_marginLeft="24dp"
            android:id="@+id/label_sea_level" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="1045.18 hPa"
            android:layout_marginLeft="24dp"
            android:id="@+id/sea_level" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/grnd_level"
            android:layout_marginLeft="24dp"
            android:id="@+id/label_grnd_level" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="998 hPa"
            android:layout_marginLeft="24dp"
            android:id="@+id/grd_level" />


    </LinearLayout>

    <!--/Pressure Info-->


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/other_information"
        android:layout_marginLeft="16dp"
        android:id="@+id/other" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/humidity"
            android:layout_marginLeft="24dp"
            android:id="@+id/label_humidity" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="70 %"
            android:layout_marginLeft="24dp"
            android:id="@+id/humidity" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/temp_kf"
            android:layout_marginLeft="24dp"
            android:id="@+id/label_temp_kf" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="0"
            android:layout_marginLeft="24dp"
            android:id="@+id/temp_kf" />


    </LinearLayout>



    <!--Weather info -->

    TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/weather_information"
        android:layout_marginLeft="16dp"
        android:id="@+id/title_weather" />




    <!--/Weather info -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/clouds_wind_information"
        android:layout_marginLeft="16dp"
        android:id="@+id/title_clouds_wind" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:background="@color/grey"/>

    <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/all"
        android:layout_marginLeft="24dp"
        android:id="@+id/label_all" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="0"
        android:layout_marginLeft="24dp"
        android:id="@+id/all" />


</LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/wind_speed"
            android:layout_marginLeft="24dp"
            android:id="@+id/label_wind_speed" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="1.96 m/s"
            android:layout_marginLeft="24dp"
            android:id="@+id/wind_speed" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/wind_deg"
            android:layout_marginLeft="24dp"
            android:id="@+id/label_speed_deg" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="343.004°"
            android:layout_marginLeft="24dp"
            android:id="@+id/deg" />


    </LinearLayout>



</LinearLayout>